[package]
name = "bing-webmaster-api"
version = "1.0.1"
edition = "2021"
authors = ["Aleksei Arsenev"]
description = "Rust client for the Bing Webmaster API"
license = "MIT OR Apache-2.0"
repository = "https://github.com/seo-meow/bing-webmaster-api"
homepage = "https://github.com/seo-meow/bing-webmaster-api"
documentation = "https://docs.rs/bing-webmaster-api"
readme = "README.md"
keywords = ["bing", "webmaster", "api", "seo", "search"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [".github/*"]

[dependencies]
# async
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

# common
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }

# http client
reqwest = { version = "0.13.2", features = ["json"] }
reqwest-middleware = "0.5.0"

# tracing
tracing = "0.1"

# url encoding
urlencoding = "2.1"

[dev-dependencies]
# test
tokio-test = "0.4"
wiremock = "0.6"
async-trait = "0.1"
http = "1.0"
rand = "0.9.2"